<resources>
    <string name="app_name">教练助手</string>
    <string name="oem_tag">coach-qingcheng</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fir_token">f60e7b4d8b237b271ef3a7741372f220</string>
    <string name="fir_token_debug">194a7a7976904a110a45f5a34a614323</string>
    <string name="baidu_provider">com.qingchengfit.fitcoach.bdpush</string>
    <string name="file_provider">com.qingchengfit.fitcoach.provider</string>
    <string name="gd_key">f6b43231ca913303da6818d62146408d</string>
    <string name="baidu_api_release">RqFugIxBdvAn7H8h5GsampTw</string>
    <string formatted="false" name="chat_user_id_header">qc_%s</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login_btn_label">登录</string>
    <string name="registe_indicat_label">注册</string>
    <string name="login_btn_lable">登&#160;&#160;录</string>
    <string name="registe_btn_lable">下一步</string>
    <string name="login_forgotpw">忘记密码</string>
    <string name="login_getcode">获取验证码</string>
    <string name="login_comfirm">确&#160;&#160;定</string>
    <string name="logint_phonenum_hint">手机号</string>
    <string name="login_checkcode_hint">手机验证码</string>
    <string name="login_password_hint">密码</string>
    <string name="login_err_no_account">请输入您的手机号码</string>
    <string name="login_err_no_checkcode">请输入验证码</string>
    <string name="title_activity_complete">CompleteActivity</string>
    <string name="comple_name">姓名</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="login_resend_msg">后重新发送</string>
    <string name="complete_label">完成</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_title">设置</string>
    <string name="myhome_baseinfo_introduce">自我介绍</string>
    <string name="title_activity_text_input">TextInputActivity</string>
    <string name="title_activity_my_home">MyHomeActivity</string>
    <string name="recordedit_competition">比赛</string>
    <string name="recordedit_comfirm">认证</string>
    <string name="recordedit_meeting">健身大会</string>
    <string name="recordedit_label_type">类型</string>
    <string name="recordedit_certificat_timestart">生效日期</string>
    <string name="recordedit_certificat_timeend">失效日期</string>
    <string name="recordedit_score">学分</string>
    <string name="recordedit_certificate_date">参会日期</string>
    <string name="recordedit_host_organization">主办机构</string>
    <string name="recordedit_name">认证名称</string>
    <string name="record_title">学习培训</string>
    <string name="workexper_title">工作经历</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="add_gym_private_01">注: 您不能自己添加“所属健身房”，需要由“所属健身房”添加您为教练，系统即可自动同步。</string>
    <string name="add_gym_private_02">如果您所属的健身房未出现在“我的健身房”列表，可能的原因如下：</string>
    <string name="add_gym_private_03">该健身房未使用「青橙健身房管理系统」</string>
    <string name="add_gym_private_04">方法1: 您可以使用“个人健身房”管理您的学员和课程预约</string>
    <string name="add_gym_private_05">方法2: 邀请健身房的管理人员开通「青橙健身房管理系统」。</string>
    <string name="add_gym_private_06">您在该健身房预留的手机号与当前登录的手机号不一致</string>
    <string name="add_gym_private_07">方法1: 让该健身房的工作人员在「青橙健身房管理系统」中修改您的手机号；</string>
    <string name="add_gym_private_08">方法2: 在“我的主页”中修改手机号，使其与在「青橙健身房管理系统」中预留的手机号一致。</string>
    <string name="title_activity_change_time">ChangeTimeActivity</string>
    <string name="title_activity_choose_student">ChooseStudentActivity</string>
    <string name="common_modify_failed">修改失败</string>
    <string name="common_modify_success">修改成功</string>
    <string name="my_course_template">课程计划模板</string>
    <string name="comom_time_to">至</string>
    <string name="common_today">今</string>
    <string name="common_i_konw">知道了</string>
    <string name="add_self_gym">添加“个人健身房”有什么用途？</string>
    <string name="myhome_default_desc">这个人很懒,什么也没有留下</string>
    <string name="myhome_data_none">暂未填写</string>
    <string name="setting_cal_sync_title">课程提醒设置</string>
    <string name="workexp_detail_hiden">该工作经历已隐藏</string>
    <string name="workexp_detail_unhiden">同步自［健身房管理系统］</string>
    <string name="add_plan_name">课程计划模板名称</string>
    <string name="add_plan_type">课程类型</string>
    <string name="add_plan_action">课程动作</string>
    <string name="gym_add_course">添加课程</string>
    <string name="gym_add_course_pic">课程图片</string>
    <string name="gym_add_course_type">课程类型</string>
    <string name="gym_add_course_type_private">私教课</string>
    <string name="gym_add_course_type_group">团课</string>
    <string name="gym_add_course_name">名称</string>
    <string name="gym_add_course_time">时长(分钟)</string>
    <string name="schedule_title">全部课程</string>
    <string name="statement_course">全部课程报表</string>
    <string name="mystudents_title">我的学员</string>
    <string name="course_private">私教</string>
    <string name="course_group">团课</string>
    <string name="course_del_manage">删除所选排期</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="please_add_one_batch">请至少添加一条排期</string>
    <string name="title_add_group_course_batch">添加团课排期</string>
    <string name="title_add_private_batch">添加私教排期</string>
    <string name="alert_endtime_greater_starttime">结束时间不能早于结束时间</string>
    <string name="alert_batch_greater_three_month">课程排期时间不能超过三个月</string>
    <string name="choose_time">选择时间</string>
    <string name="choose_week">选择星期</string>
    <string name="wechat_code">wx81e378c8fd03319d</string>
    <string name="err_server">服务器错误</string>
    <string name="label_brand_logo">品牌LOGO</string>
    <string name="label_gym_logo">场馆LOGO</string>
    <string name="label_city">城市</string>
    <string name="personal_homepage">我的主页</string>
    <string name="edit_mine_info">基本信息</string>
    <string formatted="false" name="brand_id_creator">品牌ID: %s    创建人: %s </string>
    <string name="no_permission_brand">只能由品牌创建人%s添加场馆</string>
    <string name="gym_brand_name">健身房品牌名</string>
    <string name="coach_function_hint">教练后台功能</string>
    <string name="more_gym_function_hint">更多健身房管理功能</string>
    <string name="course_batch">课程排期</string>
    <string name="course_types">课程种类</string>
    <string name="student">学员</string>
    <string name="course_statement">课程报表</string>
    <string name="sale_statement">销售报表</string>
    <string name="course_plan">课程计划模板</string>
    <string name="set_gym_brand_hint">-- 新建健身房品牌 --</string>
    <string name="next_step">下一步</string>
    <string name="guide_set_gym_hint">-- 设置场馆 -- </string>
    <string name="gym_name">场馆名称</string>
    <string name="please_input_gym_name">请填写场馆名称</string>
    <string name="please_input">请填写</string>
    <string name="address">地址</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="week1">星期一</string>
    <string name="week2">星期二</string>
    <string name="week3">星期三</string>
    <string name="week4">星期四</string>
    <string name="week5">星期五</string>
    <string name="week6">星期六</string>
    <string name="week7">星期日</string>
    <string name="simple_week1">一</string>
    <string name="simple_week2">二</string>
    <string name="simple_week3">三</string>
    <string name="simple_week4">四</string>
    <string name="simple_week5">五</string>
    <string name="simple_week6">六</string>
    <string name="simple_week7">日</string>
    <string name="every">每个</string>
    <string name="detail_address">具体地址</string>
    <string name="please_input_detail_address">请填写具体地址</string>
    <string name="please_drag_map">请拖动地图到健身房的正确位置</string>
    <string name="permission_request_camara">请打开拍照权限</string>
    <string name="alert_write_brand_name">请填写健身房品牌名</string>
    <string name="guide_set_course_hint">-- 设置课程信息 --</string>
    <string name="guide_set_group_course_hint">-- 添加团课种类 --</string>
    <string name="guide_set_private_course_hint">-- 添加私教种类 --</string>
    <string name="name_call">名称</string>
    <string name="please_input_course_name">填写课程名称</string>
    <string name="single_ordre_count">单节可约人数</string>
    <string name="input_student_count">填写人数</string>
    <string name="time_long_min">时长（分钟）</string>
    <string name="input_course_time_long">填写课程时长</string>
    <string name="course_img">课程图片</string>
    <string name="add_circle">添加周期</string>
    <string name="my_meetings">个人介绍</string>
    <string name="my_comfirms">我的资质认证</string>
    <string name="my_experience">我的工作经历</string>
    <string name="mine">我</string>
    <string name="student_card_manage">发放和管理会员卡</string>
    <string name="manage_salers">对会员跟进和维护</string>
    <string name="manage_staffs">管理员工和教练</string>
    <string name="manage_permission">创建管理营销活动</string>
    <string name="manage_signin">管理会员签到签出</string>
    <string name="manage_acitivity">创建管理营销活动</string>
    <string name="staff_manage_app">健身房管理</string>
    <string name="open_staff_app">打开健身房管理App</string>
    <string name="hint_function_in_staff_app">请在青橙健身房管理App中使用该功能</string>
    <string name="err_write_gym_name">请填写场馆名称</string>
    <string name="err_write_address">请选择地址信息</string>
    <string name="err_write_course_name">请填写课程名称</string>
    <string name="err_write_course_time_long">请填写课程时长</string>
    <string name="err_write_course_order_num">请填写单节可约人数</string>
    <string name="add_course_circle">+课程周期</string>
    <string name="time_long_d_min">时长%d分钟</string>
    <string name="change_gym">切换健身房</string>
    <string name="write_gym_info">填写健身房信息</string>
    <string name="err_please_input_start_end">请填写开始日期和结束日期</string>
    <string name="err_at_least_one_circle">请至少选择一个课程周期</string>
    <string name="edit_course_jacket">编辑课程封面照片</string>
    <string name="jacket_hint">最多可以添加5张封面照片，通过长按以后拖动来调整封面图片顺序。</string>
    <string name="add_jacket_img">+ 添加封面照片</string>
    <string name="course_min_num">最小上课人数</string>
    <string name="default_course_plan">默认课程计划</string>
    <string name="base_info">基本信息</string>
    <string name="suit_gyms">适用场馆</string>
    <string name="edit_in_chain">请在[连锁运营]中修改基本信息</string>
    <string name="manage">管理</string>
    <string name="permission_forbid_del">无删除权限</string>
    <string name="copy_link_to_board">复制链接到剪切板</string>
    <string name="add">添加</string>
    <string name="alert_del_course">该课程种类适用于%d家场馆，删除后，已有的排期和课程预约都不会受到影响。</string>
    <string name="alert_del_course_forbid">需由同时具有%d家场馆删除课程种类权限的工作人员，才可删除该课程种类</string>
    <string name="alert_del_cardtype_link_manage">该会员卡种类适用于多个场馆，请到[连锁运营]中进行删除。</string>
    <string name="alert_del_cardtype_forbid">此会员卡种类适用于多个场馆，需要具有所有适用场馆下删除会员卡种类权限的用户才能进行删除。</string>
    <string name="alert_edit_cardtype_link_manage">该会员卡种类适用于多个场馆，请到[连锁运营]中进行编辑。</string>
    <string name="alert_edit_cardtype_forbid">此会员卡种类适用于多个场馆，需要具有所有适用场馆下修改会员卡种类权限的用户才能进行编辑。</string>
    <string name="course_picture">课程图片</string>
    <string name="cardtype_all">全部类型</string>
    <string name="filter_student_card">筛选会员卡</string>
    <string name="generate_statment">生成报表</string>
    <string name="all_course">全部课程</string>
    <string name="all_students">全部学员</string>
    <string name="start_day">开始日期</string>
    <string name="end_day">结束日期</string>
    <string name="course">课程</string>
    <string name="no_limit">不限</string>
    <string name="trade_type">交易类型</string>
    <string name="pay_method">支付方式</string>
  <string name="cardtype">会员卡种类</string>
</resources>